Dual-command pipeline